# mos

./: .gitignore  .gitreview  .testr.conf  README.md  interfaces  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
deploy/deploy_cluster/: deploy_cluster.py  deploy_cluster.sh  deploy_collectd.sh  migrate.py  scaletool.py  unplugin.py
deploy/deploy_elasticsearch/: deploy_elasticsearch.sh
deploy/deploy_fuel/: deploy_fuel.sh  deploy_fuel_intel_lab.sh  deploy_fuel_lib.sh  deploy_fuel_rackspace_lab.sh
deploy/deploy_tests/: clean_tests.sh  deploy_tests.sh  install_tests.sh
deploy/deploy_virtual_computes/: deploy.yaml  hosts  run.sh
deploy/ovs_managment/: ovs_management.cfg.example  ovs_management.py  ovs_management_ui.py  requirements.txt
generate_summary_report/: generate_summary_report.py  generate_summary_report_intel_lab.py
generate_summary_report/templates/: shaker_results_table.html  standard_results_table.html  summary_report.html
helpers/: astute_yaml_parser.py  fuel_version.sh
helpers/testrail/: send_results.py  settings.py  testrail_client.py
jenkins_job_builder/1_lab_mirantis/: 15-env-reboot.yaml  HOW_DEPLOY_JENKINS_JOBS.md  gate-scaler.yaml  gate.yaml  macro.yaml  main.yaml  templates.yaml
jenkins_job_builder/2_lab_rackspace/: HOW_DEPLOY_JENKINS_JOBS.md  macro.yaml  main.yaml  (+1 more)
report_system/: HOW_TO  __init__.py  database.py  reporting.wsgi
run_tests/: run_rally.sh  run_rally_from_container.sh  run_shaker.sh  run_shaker_from_container.sh  run_tempest.sh  test.sh
self_tests/: base.py
workarounds/: apply_workarounds.sh
(+175 files in other folders)
