[metadata]
name = mos-scale
summary = MOS Scale automation and testing repository
description-file = README.md
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: Mirantis OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = mos-scale
author-email = mos-scale@mirantis.com


[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    deploy


[entry_points]
console_scripts =
    migratedb = deploy.deploy_cluster.migrate:main
    scale = deploy.deploy_cluster.scaletool:main
deploy.deploy_cluster.plugins.switches.extensions =
    switches_dell = deploy.deploy_cluster.plugins.switches.dell_switches:DellExtension
    switches_ovs = deploy.deploy_cluster.plugins.switches.ovs_switches:OvsExtension
deploy.deploy_cluster.plugins.ipmi.extensions =
    ipmi_supermicro = deploy.deploy_cluster.plugins.ipmi.drivers.supermicro_ipmi:SuperMicroIPMI
    ipmi_libvirt = deploy.deploy_cluster.plugins.ipmi.drivers.libvirt:Libvirt

